<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="nyc.c4q.shannonalexander_navarro.mytaboo.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:layout_gravity="center"
        android:text="@string/splash_title"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="85dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start" />
    <Button
        android:id="@+id/instructionsBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/instructions"/>
    <Button
        android:id="@+id/modeBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mode" />
    <Button
        android:id="@+id/add_wordBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_card"/>
    <Button
        android:id="@+id/manageBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/manage"/>
    <Button
        android:id="@+id/historyBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/history"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>
