<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="225dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/paler_blue"
        android:orientation="vertical"
        android:weightSum="7">

        <TextView
            android:id="@+id/guess_this_word"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:background="@color/pale_blue"
            android:gravity="center"
            android:hint="@string/new_word"
            android:paddingTop="10dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/taboo_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/taboo_word1"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/taboo_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/taboo_word2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/taboo_three"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/taboo_word3"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/taboo_four"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/taboo_word4"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/taboo_five"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/taboo_word5"
            android:textAlignment="center" />
    </LinearLayout>


</android.support.v7.widget.CardView>