<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pale_salmon">

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:gravity="center"
        android:text="@string/add_card"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/purple"
        android:textSize="40sp"
        android:textStyle="italic|bold" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="225dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/paler_blue"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_word_edit"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_weight="2"
                android:background="@color/pale_blue"
                android:gravity="center"
                android:hint="@string/new_word"
                android:paddingTop="10dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/word_one_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/taboo_word1"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/word_two_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/taboo_word2"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/word_three_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/taboo_word3"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/word_four_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/taboo_word4"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/word_five_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/taboo_word5"
                android:textAlignment="center" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/purple" />

</android.support.v7.widget.CardView>
